# FitGear-Clean

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_VERCEL.md  ENV_SETUP.md  LICENSE  PRODUCTION_SETUP.md  PRODUCTION_SETUP_PUBLIC.md  README.md  backend_test.py  package-lock.json  package.json  test_cart.py
.github/workflows/: deploy-backend-vercel.yml  seed-prod.yml
api/: blog.js  categories.js  health.js  index.js  products.js  test.js
api/blog/: [id].js
api/products/: [id].js
backend/: .gitignore  DEPLOY_VERCEL.md  README.md  drop_products.py  install_mongodb.sh  mongodb.sh  monitoring.py  pyproject.toml  requirements.txt  reset_database.py  sample_data.py  server.py  server_minimal.py  start_server.sh  temp_fix_products.py  test_api.sh  test_server.py  update_admin_password.py  update_images.py  vercel.json
backend/api/: index.py  main.py  requirements.txt  sample_data.py  simple.py  test.py
backend/scripts/: README.md  seed_prod_db.py
fitgear/: manage.py
fitgear/fitgear/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.production.example  .gitignore  next.config.js  next.config.ts  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.js  globals.css  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: Checkout.js  Footer.js  Footer.tsx  Header.js  Header.tsx  ProductCard.js  ProductCard.tsx  ProductDetail.tsx  ProductSkeleton.js  ProtectedRoute.js  ReviewSection.js  test_Header.js
(+75 files in other folders)
