[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
pymongo = "^4.6.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
email_validator = "^2.1.0"
gunicorn = "^21.2.0"
